<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_f7f7f7_bg"
    android:padding="15dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_bold_700"
        android:text="@string/wallet"
        android:textColor="@color/black"
        android:textSize="28sp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="20dp"
        android:id="@+id/cardHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_line_color"
        app:cardCornerRadius="17dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_wallet_b"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lexend_regular_400"
                android:text="@string/available_balance"
                android:textColor="@color/color_999999"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lexend_bold_700"
                android:text="$ 2994.51"
                android:textColor="@color/black"
                android:textSize="28sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdTransferToAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCategoryType"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/img_paket_klein"/>

            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imgCategoryType"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_regular_400"
                    android:text="@string/transfer_to_account"
                    android:textColor="@color/color_blue"
                    android:textSize="15sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/imgRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_right"/>



        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crdTransactionHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgHistory"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/img_paket_klein"/>

            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imgHistory"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexend_regular_400"
                    android:text="@string/check_transaction_history"
                    android:textColor="@color/color_blue"
                    android:textSize="15sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_right"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>