<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f7f7f7_bg"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp"
    tools:context=".activity.LoginActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lexend_regular_400"
        android:text="@string/str_access_your_controls"
        android:textColor="@color/color_999999"
        android:textSize="14dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_bold_700"
        android:text="@string/str_login_here"
        android:textColor="@color/black"
        android:textSize="28dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lexend_regular_400"
        android:text="Email address"
        android:textColor="@color/color_999999"
        android:textSize="13sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="17dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:fontFamily="@font/lexend_regular_400"
            android:hint="Add email address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lexend_regular_400"
        android:text="Password"
        android:textColor="@color/color_999999"
        android:textSize="13sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="17dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:fontFamily="@font/lexend_regular_400"
            android:hint="Add password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/icPasswordToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_pass_visible" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lexend_regular_400"
        android:text="Forgot password?"
        android:textColor="@color/color_999999"
        android:textSize="14sp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLoginButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/color_bf0b32"
        app:cardCornerRadius="17dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lexend_regular_400"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend_regular_400"
            android:text="@string/str_don_t_have_an_account_signup"
            android:textColor="@color/color_999999"
            android:textSize="14sp" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/lexend_semi_bold_600"
            android:text="Signup"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>